--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -597,8 +597,9 @@ body .Projects .projects-container .owl-carousel-1 .item {
 body .Projects .projects-container .owl-carousel-1 .card {
   margin: 2rem;
   color: white;
-  background-image: url("../img/1288491.jpg");
-  background-size: cover;
+  background-image: url("../img/ProjectPortfolio.png");
+  background-size: 31rem 43rem;
+  background-repeat: no-repeat;
   background-position: center;
   padding: 16rem 0 0;
   border: none;
@@ -956,7 +957,7 @@ body .footer .footer-iconTop a i {
 }
 @keyframes homecursortext {
   0%, 10%, 100% {
-    width: 5%;
+    width: 0%;
   }
   65%, 78%, 85% {
     width: 100%;
