--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -1137,31 +1137,23 @@ body {
 }
 
 @keyframes homeBgtext {
-  0%,
-  10%,
-  100% {
+  0%, 10%, 100% {
     background-position: -50rem 0;
   }
-  65%,
-  85% {
+  65%, 85% {
     background-position: 0 0;
   }
 }
 
 @keyframes homecursortext {
-  0%,
-  10%,
-  100% {
+  0%, 15.6%, 100% {
     width: 0%;
   }
-  65%,
-  78%,
-  85% {
+  65%, 78%, 85% {
     width: 100%;
     opacity: 1;
   }
-  75%,
-  81% {
+  75%, 81% {
     opacity: 0;
   }
 }
@@ -1281,6 +1273,11 @@ body {
       }
     }
   }
+
+
+  
+
+  
 }
 
 @media (max-width: 462px) {
