--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -281,12 +281,11 @@ body {
 
   .About {
     position: relative;
-    background: linear-gradient(to top, $bg-secundary, $bg-primary);
+    background: linear-gradient(to top, $bg-secundary, #0C1E2E);
     position: relative;
     padding: 0 10%;
-    padding-top: 5rem;
-    padding-bottom: 10rem;
     text-align: center;
+
 
     .heading {
       font-family: "Kenia", sans-serif;
@@ -404,13 +403,13 @@ body {
         border-top: 100px solid transparent;
       }
     }
+  
   }
 
   .SKills {
     position: relative;
     padding: 0 10%;
-    padding-top: 13rem;
-    padding-bottom: 10rem;
+    padding-bottom: 1rem;
     background: linear-gradient(to top, rgb(113, 113, 113), black);
 
     #MY {
@@ -695,8 +694,7 @@ body {
     position: relative;
     background: linear-gradient(to top, $bg-secundary, $bg-primary);
     padding: 0 10%;
-    padding-top: 12rem;
-    padding-bottom: 5rem;
+    
 
     #MY {
       text-align: center;
@@ -942,8 +940,8 @@ body {
     position: relative;
     background: linear-gradient(to bottom, $bg-secundary, $bg-primary);
     padding: 0 10%;
-    padding-top: 12rem;
-    padding-bottom: 5rem;
+    padding-top: 10rem;
+    padding-bottom: 3rem;
 
     #contact {
       text-align: center;
@@ -1242,6 +1240,11 @@ body {
         bottom: -40%;
         justify-content: center;
       }
+    }
+
+    .About{
+      padding: 12rem;
+      background: linear-gradient(to top, $bg-secundary, #0E2336);
     }
 
     .footer {
